--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-	"name": "gatsby-wordpress-inline-images",
+	"name": "gatsby-wordpress-experimental-inline-images",
 	"description": "A Gatsby plugin to turn remote inline images to local static images",
-	"version": "1.2.1",
+	"version": "0.0.1",
 	"author": "Tyler Barnes <tylerdbarnes@gmail.com>",
+	"contributors": [ "Pawel Szafer <pszafer@gmail.com>" ],
 	"keywords": [
 		"gatsby plugin"
 	],
